--- a/app/templates/general.hbs
+++ b/app/templates/general.hbs
@@ -6,7 +6,4 @@
     {{big-number id="admin-count" header="# of Admins" number=adminsCount}}
     {{big-number id="org-count" header="# of Organizations" number=organizationsCount}}
 </div>
-<div class="row" id="user-list">
-    <h4 class="col-md-10">Users: </h4>
-    <ul class="col-md-10"></ul>
-</div>
+{{view App.UserView}}
